tests/baselines/reference/parserES5ComputedPropertyName5.errors.txt
tests/cases/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName5.ts(2,5): error TS1169: Computed property names are not allowed in interfaces or type literals.


==== tests/cases/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName5.ts (1 errors) ====
    interface I {
        [e]: number 
        ~~~
!!! error TS1169: Computed property names are not allowed in interfaces or type literals.
    }